Pre-check version №2

--- a/index.html
+++ b/index.html
@@ -26,53 +26,53 @@
 							</form>
 						</li>
 						<li class="user-navigation__item user-navigation__entrance font-sans-300">
-							<a class="footer-item" href="#" aria-label="Открыть страницу входа в личный кабинет">Войти</a>
+							<a class="header-item" href="#" aria-label="Открыть страницу входа в личный кабинет">Войти</a>
 						</li>
 						<li class="user-navigation__item user-navigation__comparison font-sans-300">
-							<a class="footer-item" href="#" aria-label="Открыть страницу сравнения товаров">Сравнить</a>
+							<a class="header-item" href="#" aria-label="Открыть страницу сравнения товаров">Сравнить</a>
 						</li>
 						<li class="user-navigation__item user-navigation__basket font-sans-300">
-							<a class="footer-item" href="#" aria-label="Отркыть страницу корзины">Корзина</a>
+							<a class="header-item" href="#" aria-label="Отркыть страницу корзины">Корзина</a>
 						</li>
 					</ul>
 					<ul>
 						<li class="site-navigation__item site-navigation__catalog font-gilroy-eb">
-							<a class="footer-item" href="#" aria-label="Открыть каталог товаров">Каталог товаров</a>
+							<a class="header-item" href="#" aria-label="Открыть каталог товаров">Каталог товаров</a>
 							<div class="dropdown__menu">
 								<ul>
 									<li class="dropdown__item font-sans-300">
-										<a class="footer-item" href="#" aria-label="Открыть страницу товаров виртуальной реальности">Виртуальная реальность</a>
+										<a class="header-item" href="#" aria-label="Открыть страницу товаров виртуальной реальности">Виртуальная реальность</a>
 									</li>
 									<li class="dropdown__item font-sans-300">
-										<a class="footer-item" href="catalog.html" aria-label="Открыть страницу моноподов для селфи">Моноподы для селфи</a>
+										<a class="header-item" href="catalog.html" aria-label="Открыть страницу моноподов для селфи">Моноподы для селфи</a>
 									</li>
 									<li class="dropdown__item font-sans-300">
-										<a class="footer-item" href="#" aria-label="Открыть страницу экшн-камер">Экшн-камеры</a>
-									</li>
-								</ul>
-								<ul>
-									<li class="dropdown__item font-sans-300">
-										<a class="footer-item" href="#" aria-label="Открыть страницу фитнес-браслетов">Фитнес-браслеты</a>
-									</li>
-									<li class="dropdown__item font-sans-300">
-										<a class="footer-item" href="#" aria-label="Открыть страницу умных часов">Умные часы</a>
+										<a class="header-item" href="#" aria-label="Открыть страницу экшн-камер">Экшн-камеры</a>
 									</li>
 								</ul>
 								<ul>
 									<li class="dropdown__item font-sans-300">
-										<a class="footer-item" href="#" aria-label="Открыть страницу квадрокоптеров">Квадрокоптер</a>
+										<a class="header-item" href="#" aria-label="Открыть страницу фитнес-браслетов">Фитнес-браслеты</a>
+									</li>
+									<li class="dropdown__item font-sans-300">
+										<a class="header-item" href="#" aria-label="Открыть страницу умных часов">Умные часы</a>
+									</li>
+								</ul>
+								<ul>
+									<li class="dropdown__item font-sans-300">
+										<a class="header-item" href="#" aria-label="Открыть страницу квадрокоптеров">Квадрокоптер</a>
 									</li>
 								</ul>
 							</div>
 						</li>
 						<li class="site-navigation__item font-gilroy-eb">
-							<a class="footer-item" href="#" aria-label="Открыть страницу доставки">Доставка</a>
+							<a class="header-item" href="#" aria-label="Открыть страницу доставки">Доставка</a>
 						</li>
 						<li class="site-navigation__item font-gilroy-eb">
-							<a class="footer-item" href="#" aria-label="Открыть страницу с информацией о гарантии">Гарантия</a>
+							<a class="header-item" href="#" aria-label="Открыть страницу с информацией о гарантии">Гарантия</a>
 						</li>
 						<li class="site-navigation__item font-gilroy-eb">
-							<a class="footer-item" href="#" aria-label="Открыть страницу наших контактов">Контакты</a>
+							<a class="header-item" href="#" aria-label="Открыть страницу наших контактов">Контакты</a>
 						</li>
 					</ul>
 				</nav>
