--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 	<head>
 		<meta charset="UTF-8">
 		<title>Каталог | HTML Academy: Девайс</title>
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 		<link rel="stylesheet" href="css/style.min.css">
 	</head>
-	<body>
+	<body class="body">
 
 		<header class="header site-wrapper header-catalog">
 			<a class="logo-link" href="index.html" aria-label="Перейти на главную страницу">
@@ -28,56 +28,56 @@
 							</form>
 						</li>
 						<li class="user-navigation__item user-navigation__entrance user-navigation__user font-sans-300">
-							<a class="footer-item" href="#" aria-label="Открыть страницу вашего профиля">Валентин Петухов</a>
+							<a class="header-item" href="#" aria-label="Открыть страницу вашего профиля">Валентин Петухов</a>
 						</li>
 						<li class="user-navigation__item user-navigation__exit font-sans-300">
-							<a class="footer-item" href="#" aria-label="Выйти из вашего профиля">Выйти</a>
+							<a class="header-item" href="#" aria-label="Выйти из вашего профиля">Выйти</a>
 						</li>
 						<li class="user-navigation__item user-navigation__comparison font-sans-300">
-							<a class="footer-item" href="#" aria-label="Открыть страницу сравнения товаров">Сравнить</a>
+							<a class="header-item" href="#" aria-label="Открыть страницу сравнения товаров">Сравнить</a>
 						</li>
 						<li class="user-navigation__item user-navigation__basket font-sans-300">
-							<a class="footer-item" href="#" aria-label="Открыть страницу корзины">Корзина</a>
+							<a class="header-item" href="#" aria-label="Открыть страницу корзины">Корзина</a>
 						</li>
 					</ul>
 					<ul>
 						<li class="site-navigation__item site-navigation__catalog font-gilroy-eb">
-							<a class="footer-item" href="#" aria-label="Открыть каталог товаров">Каталог товаров</a>
+							<a class="header-item" href="#" aria-label="Открыть каталог товаров">Каталог товаров</a>
 							<div class="dropdown__menu">
 								<ul>
 									<li class="dropdown__item font-sans-300">
-										<a class="footer-item" href="#" aria-label="Открыть страницу с товарами виртуальной реальности">Виртуальная реальность</a>
+										<a class="header-item" href="#" aria-label="Открыть страницу с товарами виртуальной реальности">Виртуальная реальность</a>
 									</li>
 									<li class="dropdown__item font-sans-300">
-										<a class="footer-item">Моноподы для селфи</a>
+										<a class="header-item header-item-hear">Моноподы для селфи</a>
 									</li>
 									<li class="dropdown__item font-sans-300">
-										<a class="footer-item" href="#" aria-label="Открыть страницу с экшн-камерами">Экшн-камеры</a>
-									</li>
-								</ul>
-								<ul>
-									<li class="dropdown__item font-sans-300">
-										<a class="footer-item" href="#" aria-label="Открыть страницу с фитнес-браслетами">Фитнес-браслеты</a>
-									</li>
-									<li class="dropdown__item font-sans-300">
-										<a class="footer-item" href="#" aria-label="Открыть страницу с умными часами">Умные часы</a>
+										<a class="header-item" href="#" aria-label="Открыть страницу с экшн-камерами">Экшн-камеры</a>
 									</li>
 								</ul>
 								<ul>
 									<li class="dropdown__item font-sans-300">
-										<a class="footer-item" href="#" aria-label="Открыть страницу с квадрокоптерами">Квадрокоптер</a>
+										<a class="header-item" href="#" aria-label="Открыть страницу с фитнес-браслетами">Фитнес-браслеты</a>
+									</li>
+									<li class="dropdown__item font-sans-300">
+										<a class="header-item" href="#" aria-label="Открыть страницу с умными часами">Умные часы</a>
+									</li>
+								</ul>
+								<ul>
+									<li class="dropdown__item font-sans-300">
+										<a class="header-item" href="#" aria-label="Открыть страницу с квадрокоптерами">Квадрокоптер</a>
 									</li>
 								</ul>
 							</div>
 						</li>
 						<li class="site-navigation__item font-gilroy-eb">
-							<a class="footer-item" href="#" aria-label="Открыть страницу доставки">Доставка</a>
+							<a class="header-item" href="#" aria-label="Открыть страницу доставки">Доставка</a>
 						</li>
 						<li class="site-navigation__item font-gilroy-eb">
-							<a class="footer-item" href="#" aria-label="Открыть страницу с информацией о гарантии">Гарантия</a>
+							<a class="header-item" href="#" aria-label="Открыть страницу с информацией о гарантии">Гарантия</a>
 						</li>
 						<li class="site-navigation__item font-gilroy-eb">
-							<a class="footer-item" href="#" aria-label="Открыть страницу контактов">Контакты</a>
+							<a class="header-item" href="#" aria-label="Открыть страницу контактов">Контакты</a>
 						</li>
 					</ul>
 				</nav>
@@ -88,7 +88,7 @@
 			<section class="catalog">
 				<div class="site-wrapper breadcrumbs">
 					<h1 class="font-gilroy-eb">Моноподы для селфи</h1>
-					<ul class="breadcrumbs-list site-wrapper">
+					<ul class="breadcrumbs-list">
 						<li>
 							<a href="index.html" class="font-sans-300" aria-label="Перейти на главную страницу">Главная</a>
 						</li>
@@ -119,13 +119,13 @@
 							</ul>
 							<div class="sorting__arrow">
 								<div class="sorting__arrow-up">
-									<a href="#">
-										<img src="img/svg/icon-up-dir.svg" width="11" height="10" alt="Сортировка по возрастанию">
+									<a href="#" aria-label="Сортировка по возрастанию">
+										<img src="img/svg/icon-up-dir.svg" width="11" height="10" alt="Стрелка вверх">
 									</a>
 								</div>
 								<div class="sorting__arrow-down sorting__arrow-on">
-									<a href="#">
-										<img src="img/svg/icon-down-dir.svg" width="11" height="10" alt="Сортировка по убыванию">
+									<a href="#" aria-label="Сортировка по убыванию">
+										<img src="img/svg/icon-down-dir.svg" width="11" height="10" alt="Стрелка вниз">
 									</a>
 								</div>
 							</div>
@@ -139,10 +139,10 @@
 								<fieldset class="filter__price">
 									<legend class="font-gilroy-eb">Стоимость</legend>
 									<div class="price__bar">
-										<a href="#" class="price__toggle price__toggle-min">
+										<a href="#" class="price__toggle price__toggle-min" aria-label="Ползунок для выбора минимальной цены">
 											<img src="img/svg/filter-button.svg" width="20" height="23" alt="Ползунок минимальной цены">
 										</a>
-										<a href="#" class="price__toggle price__toggle-max">
+										<a href="#" class="price__toggle price__toggle-max" aria-label="Ползунок для выбора максимальной цены">
 											<img src="img/svg/filter-button.svg" width="20" height="23" alt="Ползунок максимальной цены">
 										</a>
 										<div class="price__bar-scale"></div>
@@ -291,7 +291,7 @@
 		<footer class="footer footer-catalog">
 			<div class="footer-container footer__flex site-wrapper">
 				<div class="footer__address">
-					<a href="index.html" aria-label="Пеерйти на главную страницу">
+					<a class="logo-link-footer" href="index.html" aria-label="Пеерйти на главную страницу">
 						<img src="img/svg/logo-device-footer.svg" width="163" height="35" alt="Device">
 					</a>
 					<address class="font-sans-300">г. Москва, ул. Строителей, 15</address>
