Fixed the slider for the screen reader to work correctly

--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 							<div class="promo__link-container">
 								<a class="btn font-gilroy-eb" href="#" aria-label="Открыть страницу с подробностями о данном фитнес-браслете">Подробнее</a>
 								<div class="promo__slider-container">
-									<label class="slider-radio selfie-stick" for="selfie-stick" aria-label="Промо заказ селфи-палки"></label>
-									<label class="slider-radio fitness-tracker" for="fitness-tracker" aria-label="Промо заказ браслета для фитнеса"></label>
-									<label class="slider-radio quadrocopter" for="quadrocopter" aria-label="Промо заказ квадракоптера"></label>
+									<label class="slider-radio selfie-stick" for="selfie-stick"></label>
+									<label class="slider-radio fitness-tracker" for="fitness-tracker"></label>
+									<label class="slider-radio quadrocopter" for="quadrocopter"></label>
 								</div>
 							</div>
 							<table class="promo__table">
@@ -153,9 +153,9 @@
 							<div class="promo__link-container">
 								<a class="btn font-gilroy-eb" href="#" aria-label="Открыть страницу с подробностями о данном квадрокоптере">Подробнее</a>
 								<div class="promo__slider-container">
-									<label class="slider-radio selfie-stick" for="selfie-stick" aria-label="Промо заказ селфи-палки"></label>
-									<label class="slider-radio fitness-tracker" for="fitness-tracker" aria-label="Промо заказ браслета для фитнеса"></label>
-									<label class="slider-radio quadrocopter" for="quadrocopter" aria-label="Промо заказ квадракоптера"></label>
+									<label class="slider-radio selfie-stick" for="selfie-stick"></label>
+									<label class="slider-radio fitness-tracker" for="fitness-tracker"></label>
+									<label class="slider-radio quadrocopter" for="quadrocopter"></label>
 								</div>
 							</div>
 							<table class="promo__table table__quadrocopter">
