Working with file locations

--- a/disp/catalog.html
+++ b/disp/catalog.html
@@ -12,7 +12,7 @@
 <body class="body">
 
 	<header class="header site-wrapper">
-		<a class="logo-link" href="index.html">
+		<a class="logo-link" href="../index.html">
 			<img class="logo header__logo" src="img/svg/logo-device.svg" width="163" height="35" alt="Device">
 		</a>
 		<section class="header-main">
@@ -105,7 +105,7 @@
 			<h1 class="catalog__title font-gilroy-eb">Моноподы для селфи</h1>
 			<ul class="breadcrumbs__list">
 				<li class="breadcrumbs__item">
-					<a class="breadcrumbs__link font-sans-300" href="index.html"
+					<a class="breadcrumbs__link font-sans-300" href="../index.html"
 						aria-label="Перейти на главную страницу">Главная</a>
 				</li>
 				<li class="breadcrumbs__item">
@@ -351,7 +351,7 @@
 	<footer class="footer">
 		<div class="footer-container footer--flex site-wrapper">
 			<div class="footer__address-container">
-				<a class="logo-link" href="index.html">
+				<a class="logo-link" href="../index.html">
 					<img src="img/svg/logo-device-footer.svg" width="163" height="35" alt="Device">
 				</a>
 				<address class="footer__address font-sans-300">г. Москва, ул. Строителей, 15</address>
