--- a/disp/index.html
+++ b/disp/index.html
@@ -12,7 +12,7 @@
 <body class="body">
 
 	<header class="header header--index site-wrapper">
-		<img class="logo header__logo" src="disp/disp/img/svg/logo-device.svg" width="163" height="35" alt="Device">
+		<img class="logo header__logo" src="img/svg/logo-device.svg" width="163" height="35" alt="Device">
 		<section class="header-main">
 			<h1 class="visually-hidden">Device</h1>
 			<nav class="header__navigation">
@@ -109,7 +109,7 @@
 			</div>
 			<ul class="main__promo">
 				<li class="promo__item promo__selfie-stick">
-					<img class="promo__img promo__img-selfie-stick" src="disp/disp/img/selfie-stick.png" width="384" height="486"
+					<img class="promo__img promo__img-selfie-stick" src="img/selfie-stick.png" width="384" height="486"
 						alt="Изображение селфи-палка">
 					<div class="one promo__content">
 						<h3 class="promo__content-title promo__title-selfie-stick font-gilroy-eb">Делай селфи, как Бен
@@ -145,7 +145,7 @@
 					</div>
 				</li>
 				<li class="promo__item promo__fitness-tracker">
-					<img class="promo__img promo__img-fitness-tracker" src="disp/disp/img/fitness-tracker.png" width="345"
+					<img class="promo__img promo__img-fitness-tracker" src="img/fitness-tracker.png" width="345"
 						height="485" alt="Изображение фитнес-браслета">
 					<div class="two promo__content">
 						<h3 class="promo__content-title promo__title-fitness-tracker font-gilroy-eb">Худеем правильно!
@@ -176,7 +176,7 @@
 					</div>
 				</li>
 				<li class="promo__item promo__quadrocopter">
-					<img class="promo__img promo__img-quadrocopter" src="disp/disp/img/quadrocopter.png" width="526" height="334"
+					<img class="promo__img promo__img-quadrocopter" src="img/quadrocopter.png" width="526" height="334"
 						alt="Изображение квадрокоптера">
 					<div class="three promo__content">
 						<h3 class="promo__content-title font-gilroy-eb">Порхает как бабочка, жалит как пчела!</h3>
@@ -217,7 +217,7 @@
 					<a href="#" aria-label="Открыть страницу с товарами виртуальной реальности">
 						<div class="popularity__img-bg"></div>
 						<div class="popularity__img-container">
-							<img class="popularity__img" src="disp/img/svg/vr.svg" width="97" height="55"
+							<img class="popularity__img" src="img/svg/vr.svg" width="97" height="55"
 								alt="Иконка VR-очков">
 						</div>
 						<p class="popularity__item-text font-gilroy-eb">Виртуальная реальность</p>
@@ -227,7 +227,7 @@
 					<a href="catalog.html" aria-label="Открыть страницу с моноподами для селфи">
 						<div class="popularity__img-bg"></div>
 						<div class="popularity__img-container">
-							<img class="popularity__img" src="disp/img/svg/monopod.svg" width="86" height="117"
+							<img class="popularity__img" src="img/svg/monopod.svg" width="86" height="117"
 								alt="Иконка монопода">
 						</div>
 						<p class="popularity__item-text popularity__monopods-for-selfie-text font-gilroy-eb">Моноподы
@@ -238,7 +238,7 @@
 					<a href="#" aria-label="Открыть страницу с экшн-камерами">
 						<div class="popularity__img-bg"></div>
 						<div class="popularity__img-container">
-							<img class="popularity__img" src="disp/img/svg/action-camera.svg" width="71" height="87"
+							<img class="popularity__img" src="img/svg/action-camera.svg" width="71" height="87"
 								alt="Иконка экшн-камеры">
 						</div>
 						<p class="popularity__item-text font-gilroy-eb">Экшн-камеры</p>
@@ -248,7 +248,7 @@
 					<a href="#" aria-label="Открыть страницу с фитнес-браслетами">
 						<div class="popularity__img-bg"></div>
 						<div class="popularity__img-container">
-							<img class="popularity__img" src="disp/img/svg/fitness-tracker.svg" width="107" height="65"
+							<img class="popularity__img" src="img/svg/fitness-tracker.svg" width="107" height="65"
 								alt="Иконка фитнес-браслета">
 						</div>
 						<p class="popularity__item-text popularity__fitness-bracelet-text font-gilroy-eb">
@@ -259,7 +259,7 @@
 					<a href="#" aria-label="Открыть страницу с умными часами">
 						<div class="popularity__img-bg"></div>
 						<div class="popularity__img-container">
-							<img class="popularity__img" src="disp/img/svg/smartwatch.svg" width="56" height="98"
+							<img class="popularity__img" src="img/svg/smartwatch.svg" width="56" height="98"
 								alt="Иконка умных часов">
 						</div>
 						<p class="popularity__item-text font-gilroy-eb">Умные часы</p>
@@ -269,7 +269,7 @@
 					<a href="#" aria-label="Открыть страницу с квадрокоптерами">
 						<div class="popularity__img-bg"></div>
 						<div class="popularity__img-container">
-							<img class="popularity__img" src="disp/img/svg/quadrocopter.svg" width="132" height="69"
+							<img class="popularity__img" src="img/svg/quadrocopter.svg" width="132" height="69"
 								alt="Иконка квадрокоптера">
 						</div>
 						<p class="popularity__item-text font-gilroy-eb">Квадрокоптеры</p>
@@ -299,7 +299,7 @@
 							<p class="services__text services__text--first services__delivery-text font-sans-300">Мы с
 								удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы
 								неплохо заработаем, поднимая его на ваш этаж.</p>
-							<img class="services__img" src="disp/img/svg/delivery.svg" width="136" height="164"
+							<img class="services__img" src="img/svg/delivery.svg" width="136" height="164"
 								alt="Иконка доставщика">
 						</li>
 						<li class="services__item services__warranty">
@@ -309,7 +309,7 @@
 								товара у вас сгорит дом — не переживайте, мы выдадим вам новый.</p>
 							<p class="services__text services__warranty-text font-sans-300">Товар, не дом, конечно же.
 							</p>
-							<img class="services__img" src="disp/img/svg/warranty.svg" width="171" height="195"
+							<img class="services__img" src="img/svg/warranty.svg" width="171" height="195"
 								alt="Иконка гарантии">
 						</li>
 						<li class="services__item services__credit">
@@ -317,7 +317,7 @@
 							<p class="services__text services__text--first services__credit-text font-sans-300">Залезть
 								в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные
 								условия кредита. Выгодные для нашего банка, разумеется.</p>
-							<img class="services__img" src="disp/img/svg/credit.svg" width="156" height="188"
+							<img class="services__img" src="img/svg/credit.svg" width="156" height="188"
 								alt="Иконка заёмщика">
 						</li>
 					</ul>
@@ -329,25 +329,25 @@
 			<ul class="partners__list">
 				<li class="partners__item">
 					<a href="https://www.dji.com" class="partners__link" aria-label="Открыть сайт нашего партнёра DJI">
-						<img class="partners__img" src="disp/img/dji.png" width="260" height="100" alt="Логотип DJI">
+						<img class="partners__img" src="img/dji.png" width="260" height="100" alt="Логотип DJI">
 					</a>
 				</li>
 				<li class="partners__item">
 					<a href="http://www.sp-gadgets.com/" class="partners__link"
 						aria-label="Открыть сайт нашего партнёра SP Gadgets">
-						<img class="partners__img" src="disp/img/spgadgets.png" width="260" height="100"
+						<img class="partners__img" src="img/spgadgets.png" width="260" height="100"
 							alt="Логотип SP Gadgets">
 					</a>
 				</li>
 				<li class="partners__item">
 					<a href="https://gopro.ru/" class="partners__link" aria-label="Открыть сайт нашего партнёра GoPro">
-						<img class="partners__img" src="disp/img/gopro.png" width="260" height="100" alt="Логотип GoPro">
+						<img class="partners__img" src="img/gopro.png" width="260" height="100" alt="Логотип GoPro">
 					</a>
 				</li>
 				<li class="partners__item">
 					<a href="https://www.vive.com/" class="partners__link"
 						aria-label="Открыть сайт нашего партнёра HTC Vive">
-						<img class="partners__img" src="disp/img/vive.png" width="260" height="100" alt="Логотип HTC Vive">
+						<img class="partners__img" src="img/vive.png" width="260" height="100" alt="Логотип HTC Vive">
 					</a>
 				</li>
 			</ul>
@@ -372,7 +372,7 @@
 				<p class="about-contacts__text font-sans-300">Вы можете забрать товар сами, заехав в наш офис. Заодно,
 					вы сможете проверить работоспособность покупки. Всякое бывает.</p>
 				<a class="link-map contacts__map" href="popup__map.html" aria-label="Открыть карту">
-					<img class="link-map__img" src="disp/img/map.png" width="560" height="222"
+					<img class="link-map__img" src="img/map.png" width="560" height="222"
 						alt="Карта нашего местоположения">
 				</a>
 				<section class="popup popup--none about-contacts__popup popup__map">
@@ -383,7 +383,7 @@
 							width="960" height="550" style="border:0;" allowfullscreen="" aria-hidden="false"
 							tabindex="0"></iframe>
 						<button class="popup__close" type="button">
-							<img src="disp/img/svg/modal-close.svg" width="55" height="55"
+							<img src="img/svg/modal-close.svg" width="55" height="55"
 								alt="Иконка закрытия модального окна" aria-label="Закрыть карту">
 						</button>
 					</div>
@@ -413,7 +413,7 @@
 							autocomplete="off" required></textarea>
 						<button class="btn write-us__btn font-gilroy-eb" type="submit">Отправить</button>
 						<button class="popup__close" type="button">
-							<img src="disp/img/svg/modal-close.svg" width="55" height="55"
+							<img src="img/svg/modal-close.svg" width="55" height="55"
 								alt="Иконка закрытия модального окна" aria-label="Закрыть форму обратной связи">
 						</button>
 					</form>
@@ -425,7 +425,7 @@
 	<footer class="footer footer--index">
 		<div class="footer-container footer--flex site-wrapper">
 			<div class="footer__address-container">
-				<img src="disp/img/svg/logo-device-footer.svg" width="163" height="35" alt="Device">
+				<img src="img/svg/logo-device-footer.svg" width="163" height="35" alt="Device">
 				<address class="footer__address font-sans-300">г. Москва, ул. Строителей, 15</address>
 			</div>
 			<div class="footer__links footer--flex">
@@ -465,17 +465,17 @@
 						<ul class="social-container--footer footer--flex site-navigation__list">
 							<li class="footer__social-icon">
 								<a href="#" aria-label="Перейти на нашу страницу Facebook">
-									<img src="disp/img/svg/fb.svg" width="32" height="32" alt="Логотип Facebook">
+									<img src="img/svg/fb.svg" width="32" height="32" alt="Логотип Facebook">
 								</a>
 							</li>
 							<li class="footer__social-icon">
 								<a href="#" aria-label="Перейти на нашу страницу Instagram">
-									<img src="disp/img/svg/instagram.svg" width="32" height="32" alt="Логотип Instagram">
+									<img src="img/svg/instagram.svg" width="32" height="32" alt="Логотип Instagram">
 								</a>
 							</li>
 							<li class="footer__social-icon">
 								<a href="#" aria-label="Перейти на нашу страницу Twitter">
-									<img src="disp/img/svg/twitter.svg" width="32" height="32" alt="Логотип Twitter">
+									<img src="img/svg/twitter.svg" width="32" height="32" alt="Логотип Twitter">
 								</a>
 							</li>
 						</ul>
@@ -485,7 +485,7 @@
 							aria-label="Позвонить нам по телефону: +74954959595">Тел.: +7 (495) 495-95-95</a>
 						<a class="user-navigation__logo-footer" href="https://htmlacademy.ru/intensive/htmlcss"
 							aria-label="Перейти на страницу курса HTML Academy">
-							<img src="disp/img/svg/logo-html.svg" width="27" height="34" alt="Логотип HTML Academy">
+							<img src="img/svg/logo-html.svg" width="27" height="34" alt="Логотип HTML Academy">
 						</a>
 					</div>
 				</div>
@@ -493,7 +493,7 @@
 		</div>
 	</footer>
 
-	<script src="disp/js/app.min.js"></script>
+	<script src="js/app.min.js"></script>
 </body>
 
 </html>
