Added «disabled» to the radio

--- a/disp/catalog.html
+++ b/disp/catalog.html
@@ -205,7 +205,7 @@
 								</li>
 								<li class="color__item">
 									<input type="checkbox" class="visually-hidden color__input filter__input"
-										id="filter__color-red" name="filter__color-red" title="Красный цвет" checked disabled>
+										id="filter__color-red" name="filter__color-red" title="Красный цвет" checked>
 									<label for="filter__color-red"
 										class="font-sans-300 color__label filter__label">Красный</label>
 								</li>
@@ -213,7 +213,7 @@
 									<input type="checkbox" class="visually-hidden color__input filter__input"
 										id="filter__color-pink" name="filter__color-pink" title="Розовый цвет">
 									<label for="filter__color-pink"
-										class="font-sans-300 color__label filter__label">Розовый</label>
+										class="font-sans-300 color__label filter__label" disabled>Розовый</label>
 								</li>
 							</ul>
 						</fieldset>
