Added «disabled» to the radio

--- a/disp/catalog.html
+++ b/disp/catalog.html
@@ -211,9 +211,9 @@
 								</li>
 								<li class="color__item">
 									<input type="checkbox" class="visually-hidden color__input filter__input"
-										id="filter__color-pink" name="filter__color-pink" title="Розовый цвет">
+										id="filter__color-pink" name="filter__color-pink" title="Розовый цвет" disabled>
 									<label for="filter__color-pink"
-										class="font-sans-300 color__label filter__label" disabled>Розовый</label>
+										class="font-sans-300 color__label filter__label">Розовый</label>
 								</li>
 							</ul>
 						</fieldset>
